# WPSProfileCipher

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  pom.xml  vcpkg.json
.github/workflows/: build_and_release.yaml
cmake/: wps_profile_cipher-config.cmake.in
include/wps_profile_cipher/: command_line.hpp  feature_codec.hpp  line_ending.hpp  oem_signature.hpp  profile_converter.hpp  profile_document.hpp  profile_value_cipher.hpp  version.hpp
src/cli/: command_line.cpp  main.cpp
src/crypto/: feature_codec.cpp  oem_signature.cpp  profile_value_cipher.cpp
src/main/kotlin/tech/youko/wpsprofilecipher/: FeatureCipher.kt  Main.kt  OemSigner.kt  ProfileFile.kt  TextCipher.kt
src/profile/: profile_converter.cpp  profile_document.cpp
src/test/kotlin/tech/youko/wpsprofilecipher/: FeatureCipherTest.kt  OemIniSignerTest.kt  ProfileFileTest.kt  TextCipherTest.kt  WpsProfileFileTest.kt
tests/: command_line_tests.cpp  feature_codec_tests.cpp  oem_signature_tests.cpp  profile_converter_tests.cpp  profile_value_cipher_tests.cpp
tools/: ida_extract_kbcc_features.py  kbaseconfigcenter64.dll.features.csv  kbaseconfigcenter64.dll.features.json
